modify saltstack for 2018-11-15-12:44

--- a/3.Saltstack.md
+++ b/3.Saltstack.md
@@ -145,7 +145,7 @@ SaltstackServer.com:
 state：描述文件，YAML格式，.sls后缀结尾。配置文件就是YAML格式
 YAML三板斧：
 	1. 缩进		#2个空格，禁止使用tab键，
-	2. 冒号		#key: value 键值对中的冒号后面有一个空格，冒号路2个空格代表层级关系
+	2. 冒号		#key: value 键值对中的冒号后面有一个空格，冒号前2个空格代表层级关系
 	3. 短横线	#- list1 列表短横线后面也有一个空格，千万注意
 
 [root@SaltstackServer salt]# vim /etc/salt/master
@@ -190,7 +190,7 @@ apache-service:
   service.running:
     - name: httpd
     - enable: True
-但是生产环境有好多台不同的应用模块，总不能手动一个一个敲响，所以要用到top.file文件，vim /etc/salt/master  搜索top.file可查看top.sys文件放置在哪里
+但是生产环境有好多台不同的应用模块，总不能手动一个一个敲响，所以要用到top.file文件，vim /etc/salt/master  搜索top.file可查看top.sls文件放置在哪里
  559 #####      State System settings     #####
  560 ##########################################
  561 # The state system uses a "top" file to tell the minions what environment to
@@ -426,7 +426,7 @@ linux-node1:
 注：当名字一样时，优先级从1到4排序
 
 #Pillar:
-Pillar是动态的。给特定的Minion指定特定的数据（top file也是这样的）。只有指定的minion自己能看到自己的数据，比较案例。而grains却是所有的minion都能看到，不安全。所以在普通的信息时用grains,而在涉及帐号密码时使用pillar。
+Pillar是动态的。给特定的Minion指定特定的数据（top file也是这样的）。只有指定的minion自己能看到自己的数据，比较案例。而grains却是所有的minion都能看到，不安全。所以在普通的信息时使用grains,而在涉及帐号密码时使用pillar。
 Pillar的所有item键值，在/etc/salt/master里面可以打开，例：
 893 # master config file that can then be used on minions.
 894 pillar_opts: True
@@ -479,13 +479,13 @@ linux-node1:
 
 ######Grains和Pillar对比：
 Grains:
-类型：静态（需要重启）
-数据采集方式：minion启动时采集
+类型：静态（需要重启minion服务或在master端使用saltutil.snyc_grains同步grains）
+数据采集方式：minion启动时采集或master自定义
 应用场景：数据查询，目标选择，配置管理
-定义位置：minion端
+定义位置：minion端和master端
 
 Pillar:
-类型：动态（不需要重启）
+类型：动态（不需要重启,需要使用saltutil.refresh_pillar同步pillar）
 数据采集方式：master自定义
 应用场景：目标选择，配置管理，机密数据
 定义位置：master端
@@ -497,6 +497,7 @@ Pillar:
 命令：salt
 目标：'*'
 模块：cmd.run   #自带150+模块，也可自己写模块
+命令：'w'
 返回：执行后的结果返回，Returnners
 解析：
 目标：Targeting
@@ -779,4 +780,28 @@ linux-node1:
     tmpfs           920M     0  920M   0% /sys/fs/cgroup
     /dev/sda1      1014M  140M  875M  14% /boot
     tmpfs           184M     0  184M   0% /run/user/0
+
+小结：
+1.minion启动时收集本地信息成为grains的键值对
+2.使用grains可用于目标选择，配置管理，信息查询。
+3.grains不用top文件亦可执行，例：( salt -G 'os:Centos' test.ping ),但pillar却不行，pillar只有top文件才能执行
+4.grains目标选择也可以写入/srv/salt/top.sls文件中使用。
+5.grains自定义优先组：1.系统自带，2.minion端/etc/salt/grains自定义，需要重启minion服务，3.minion端/etc/salt/minion自定义，需要重启minion服务，4.master端/srv/salt/_grains/*.py目录下自定义,需要使用（salt '*' saltutil.sync_grains）命令来同步。
+6.pillar常用于机密信息处理，grains常用于普通信息处理。
+7.pillar的描述文件在/srv/pillar/*.sls，pillor的top文件在/srv/pillar/top.sls，pillar的描述文件编写完成后必需刷新才能生效，命令：(salt '*' saltutil.refresh_pillar)
+8.自定义模块可满足自己的需要，在/srv/salt/_modules/目录下编写*.py文件
+
+文件路径：
+1. master配置文件：/etc/salt/master
+2. minion配置文件：/etc/salt/master
+3. master下发任务到minion后minion同步的路径：/var/cache/salt/minion
+4. minion和master的公钥和私钥路径：/etc/salt/minion/pki/和/etc/salt/master/pki
+5. minion的id文件路径：/etc/salt/minion_id
+6. minion的自定义item目录1./etc/slat/grains 2./etc/salt/minion
+7. master上的top file文件路径：/srv/salt/top.sls
+8. master上的pillar的top file文件路径：/srv/pillar/top.sls
+9. master上的pillar的描述文件路径：/srv/pillar/*.sls
+10. master上的描述文件路径：/srv/salt/*.sls
+11. master自定义grains路径：/srv/salt/_grains/*.py
+12. master自定义模块路径：/srv/salt/_modules/*.py
 </pre>
