modify 3.Saltstack.md for 2018-12-29-23:03

--- a/3.Saltstack.md
+++ b/3.Saltstack.md
@@ -105,11 +105,11 @@ Key for minion linux-node1 accepted.
 salt-key -d linux-node1  #此时linux-node1 minion是不在minions_pre列表中了，所以只能重启linux-node1的minion才能重新到达minions_pre列表中了
 salt-key -D是全部删除，删除一般不建议用
 ############
-当master同意minion加入后，master的公钥就会传输在各个minion的/etc/salt/pki/minion/minion_master.pub文件下，而之前minion请求master认证时已经把各自的minion发给master了，所以当master同意minion认证后就是双方成功交换了公钥，这样一来就可以进行加密传输了
+当master同意minion加入后，master的公钥就会交换传输在各个minion的/etc/salt/pki/minion/minion_master.pub文件下，而之前minion请求master认证时已经把各自的minion发给master了，所以当master同意minion认证后就是双方成功交换了公钥，这样一来就可以进行加密传输了
 注：再次重申id不要随便更改，否则master和minion之前的公钥就要重头开始认证交换了，id主要用ip和主机名，游戏公司用ip多，电商用主机名，dns不能解析下划线的，只能解析横杠。记住
 
 ###远程执行：
-#测试所有minion跟master之间的密钥通信是否正常，返回值是True则代表密钥成功通信，"*" 代表所以minion目录，test.ping是模块加方法。注意这里的ping不是ICMP的ping
+#测试所有minion跟master之间的密钥通信是否正常，返回值是True则代表密钥成功通信，"*" 代表所有minion目录，test.ping是模块加方法。注意这里的ping不是ICMP的ping
 [root@SaltstackServer salt]# salt "*" test.ping
 linux-node1:
     True
@@ -215,7 +215,9 @@ base:
 salt4505端口是发布端口
 tcp        0      0 0.0.0.0:4505            0.0.0.0:*               LISTEN      9262/python         
 tcp        0      0 0.0.0.0:4506            0.0.0.0:*               LISTEN      9268/python
-####lsof(list open file)列出打开文件ip端口4504的壮态
+####lsof(list open file)列出打开文件ip端口4505的壮态
+###man 2 kill  //进行kill(2)的查询手册 
+###lsof -i @192.168.1.233 -n//查看打开这个ip的有哪里
 [root@SaltstackServer /srv/salt]# lsof -i:4505 -n
 COMMAND     PID USER   FD   TYPE DEVICE SIZE/OFF NODE NAME
 salt-mini  3718 root   21u  IPv4 114430      0t0  TCP 192.168.1.235:46892->192.168.1.235:4505 (ESTABLISHED)
@@ -365,7 +367,7 @@ base:
 
 ###自定义grains
 在/srv/salt/目录下新建_grains目录，minion自己会到这个目录下来找自定义grains
-cd /srv/salt/ && mkdir /_grains
+cd /srv/salt/ && mkdir _grains
 [root@SaltstackServer /srv/salt/_grains]# cat my_grains.py 
 #!/usr/bin/env python
 #-*- coding: utf-8 -*-
@@ -426,7 +428,7 @@ linux-node1:
 注：当名字一样时，优先级从1到4排序
 
 #Pillar:
-Pillar是动态的。给特定的Minion指定特定的数据（top file也是这样的）。只有指定的minion自己能看到自己的数据，比较案例。而grains却是所有的minion都能看到，不安全。所以在普通的信息时使用grains,而在涉及帐号密码时使用pillar。
+Pillar是动态的。给特定的Minion指定特定的数据（top file也是这样的）。只有指定的minion自己能看到自己的数据，比较安全。而grains却是所有的minion都能看到，不安全。所以在普通的信息时使用grains,而在涉及帐号密码时使用pillar。
 Pillar的所有item键值，在/etc/salt/master里面可以打开，例：
 893 # master config file that can then be used on minions.
 894 pillar_opts: True
@@ -490,7 +492,7 @@ Pillar:
 应用场景：目标选择，配置管理，机密数据
 定义位置：master端
 
-假如有100台机器：如果定义grains，那么需要在每台minion去设置，如果定义pillar,只需要在master一台机器上设置就可以了
+假如有100台机器：如果定义grains，那么需要在每台minion去设置或在master上的/srv/salt/_grains目录下设置即可，如果定义pillar,只需要在master一台机器上设置就可以了
 
 #########深入学习Saltstack远程执行：
 例如:salt '*' cmd.run 'w'
@@ -611,7 +613,7 @@ linux-node1:
     ----------
     base:
         - web.apache
-#手动执行安装模块：[root@SaltstackServer ~]# salt '*' state.single pkg.install name=lsof
+#手动执行安装模块：[root@SaltstackServer ~]# salt '*' state.single pkg.installed name=lsof
 
 把minion的返回结果直接写到mysql,写到mysql的不是master写的，而是minion直接写的。因为Saltstack是python写的，minion又要写到mysql，所以minion要安装MYSQL-pyshon软件
 需要用到的模块：return
@@ -784,16 +786,16 @@ linux-node1:
 小结：
 1.minion启动时收集本地信息成为grains的键值对
 2.使用grains可用于目标选择，配置管理，信息查询。
-3.grains不用top文件亦可执行，例：( salt -G 'os:Centos' test.ping ),但pillar却不行，pillar只有top文件才能执行
+3.grains不用top文件亦可执行，例：( salt -G 'os:Centos' state.sls web.apache ),但pillar却不行，pillar只有top文件才能执行
 4.grains目标选择也可以写入/srv/salt/top.sls文件中使用。
-5.grains自定义优先组：1.系统自带，2.minion端/etc/salt/grains自定义，需要重启minion服务，3.minion端/etc/salt/minion自定义，需要重启minion服务，4.master端/srv/salt/_grains/*.py目录下自定义,需要使用（salt '*' saltutil.sync_grains）命令来同步。
+5.grains自定义优先组：1.系统自带，2.minion端/etc/salt/grains自定义，需要重启minion服务，3.minion端/etc/salt/minion自定义，需要重启minion服务，4.master端/srv/salt/_grains/*.py自定义,需要使用（salt '*' saltutil.sync_grains）命令来同步。
 6.pillar常用于机密信息处理，grains常用于普通信息处理。
 7.pillar的描述文件在/srv/pillar/*.sls，pillor的top文件在/srv/pillar/top.sls，pillar的描述文件编写完成后必需刷新才能生效，命令：(salt '*' saltutil.refresh_pillar)
 8.自定义模块可满足自己的需要，在/srv/salt/_modules/目录下编写*.py文件
 
 文件路径：
 1. master配置文件：/etc/salt/master
-2. minion配置文件：/etc/salt/master
+2. minion配置文件：/etc/salt/minion
 3. master下发任务到minion后minion同步的路径：/var/cache/salt/minion
 4. minion和master的公钥和私钥路径：/etc/salt/minion/pki/和/etc/salt/master/pki
 5. minion的id文件路径：/etc/salt/minion_id
