modify 5.Saltstack.md for 2018-12-30-12:35

--- a/5.Saltstack.md
+++ b/5.Saltstack.md
@@ -15,7 +15,7 @@ apache-service:
 
 1. apache-service为名称(ID)声明,不写names,则默认name就是名称声明的名称。ID声明在高级状态下必须唯一
 2. service.running为State声明，状态声明，模块声明
-3. - name: httpd为称选项声明
+3. - name: httpd为名称选项声明
 
 实际应用例子：LAMP架构
 1. 安装软件包		pkg
@@ -173,7 +173,7 @@ salt 'linux*' state.sls lamp.lamp
 
 状态间关系：
  1. 我依赖谁    require: 
-    require: #我依赖下面两个模块的id是否为True成功执行，为True我才能成功执行
+    require: #我依赖下面两个模块的id是否为True，为True我才能成功执行
       - pkg: lamp-pkg  #pkg是模块名，后面是相关的ID
       - file: apache-config
  2. 我被谁依赖   require_in
@@ -318,7 +318,7 @@ pillar_roots:
 1.base基础环境初始化编写基础模块sls
 #dns.sls----dns配置
 [root@SaltstackServer /srv/salt/base/init]# cat dns.sls
-/etc/resove.conf:
+/etc/resolve.conf:
   file.managed:
     - source: salt://init/files/resolv.conf
     - user: root
@@ -336,7 +336,7 @@ pillar_roots:
 /etc/bashrc:
   file.append:
     - text:
-      - export PROMPT_COMMAND='{ msg=$(history 1 | { read x y; echo $y; });logger "[euid=$(whoami)]":$(who am i):[`pwd`]"$msg"; }'
+      - export PROMPT_COMMAND='{ msg=$(history 1 | { read x y; echo $y; });logger "[euid=$(whoami)]":$(whoami):[`pwd`]"$msg"; }'
 #sysctl.sls----内核参数优化
 [root@SaltstackServer /srv/salt/base/init]# cat sysctl.sls 
 net.ipv4.ip_local_port_range:    #客户端打口随机端口范围
