modify 5.saltstack for 201901022345

--- a/5.Saltstack.md
+++ b/5.Saltstack.md
@@ -1,4 +1,4 @@
-﻿#Saltstack深入
+#Saltstack深入
 ####YAML语法：
 简介：YAML语法写成sls描述文件，sls全称：Salt State
 <pre>
@@ -440,6 +440,261 @@ linux-node1:
     base:
         - init.init
 [root@SaltstackServer /srv/salt/base]# salt '*' state.highstate  --执行高级状态
+
+##keepalived部署：
+[root@SaltstackServer /srv/salt/prod/modules/keepalived]# vim install.sls
+---------------------------------------------------------
+{% set keepalived_tar= 'keepalived-1.2.17.tar.gz'  %}
+{% set keepalived_source= 'salt://modules/keepalived/files/'  %}
+
+keepalived-install:
+  file.managed:
+    - name: /usr/local/src/{{ keepalived_tar }}
+    - source: {{ keepalived_source }}{{ keepalived_tar }}
+    - mode: 755
+    - user: root
+    - group: root
+  cmd.run:
+    - name: cd /usr/local/src && tar zxf {{  keepalived_tar }} && cd keepalived-1.2.17 && ./configure --prefix=/usr/local/keepalived --disable-fwmark && make && make install
+    - unless: test -d /usr/local/keepalived
+    - require:
+      - file: keepalived-install
+
+/etc/sysconfig/keepalived:
+  file.managed:
+    - source: {{ keepalived_source }}keepalived.sysconfig
+    - mode: 644
+    - user: root
+    - group: root
+
+/etc/init.d/keepalived:
+  file.managed:
+    - source: {{ keepalived_source }}keepalived.init
+    - mode: 755
+    - user: root
+    - group: root
+
+keepalived-init:
+  cmd.run:
+    - name: chkconfig --add keepalived
+    - unless: chkconfig --list | grep keepalived
+    - require:
+      - file: /etc/init.d/keepalived
+
+/etc/keepalived:
+  file.directory:
+    - user: root
+    - group: root
+---------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/modules/keepalived/files]# ls
+keepalived-1.2.17.tar.gz  keepalived.init  keepalived.sysconfig
+[root@SaltstackServer /srv/salt/prod/modules/keepalived/files]# cat keepalived.init
+---------------------------------------------------------                                                                                                         
+#!/bin/sh
+#
+# Startup script for the Keepalived daemon
+#
+# processname: keepalived
+# pidfile: /var/run/keepalived.pid
+# config: /etc/keepalived/keepalived.conf
+# chkconfig: - 21 79
+# description: Start and stop Keepalived
+
+# Source function library
+. /etc/rc.d/init.d/functions
+
+# Source configuration file (we set KEEPALIVED_OPTIONS there)
+. /etc/sysconfig/keepalived
+
+RETVAL=0
+
+prog="keepalived"
+
+start() {
+    echo -n $"Starting $prog: "
+#    daemon keepalived ${KEEPALIVED_OPTIONS}
+    daemon /usr/local/keepalived/sbin/keepalived ${KEEPALIVED_OPTIONS}
+    RETVAL=$?
+    echo
+    [ $RETVAL -eq 0 ] && touch /var/lock/subsys/$prog
+}
+
+stop() {
+    echo -n $"Stopping $prog: "
+    killproc keepalived
+    RETVAL=$?
+    echo
+    [ $RETVAL -eq 0 ] && rm -f /var/lock/subsys/$prog
+}
+
+reload() {
+    echo -n $"Reloading $prog: "
+    killproc keepalived -1
+    RETVAL=$?
+    echo
+}
+
+# See how we were called.
+case "$1" in
+    start)
+        start
+        ;;
+    stop)
+        stop
+        ;;
+    reload)
+        reload
+        ;;
+    restart)
+        stop
+        start
+        ;;
+    condrestart)
+        if [ -f /var/lock/subsys/$prog ]; then
+            stop
+            start
+        fi
+        ;;
+    status)
+        status keepalived
+        RETVAL=$?
+        ;;
+    *)
+        echo "Usage: $0 {start|stop|reload|restart|condrestart|status}"
+        RETVAL=1
+esac
+
+exit $RETVAL
+---------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/modules/keepalived/files]# cat keepalived.sysconfig
+---------------------------------------------------------
+# Options for keepalived. See `keepalived --help' output and keepalived(8) and
+# keepalived.conf(5) man pages for a list of all options. Here are the most
+# common ones :
+#
+# --vrrp               -P    Only run with VRRP subsystem.
+# --check              -C    Only run with Health-checker subsystem.
+# --dont-release-vrrp  -V    Dont remove VRRP VIPs & VROUTEs on daemon stop.
+# --dont-release-ipvs  -I    Dont remove IPVS topology on daemon stop.
+# --dump-conf          -d    Dump the configuration data.
+# --log-detail         -D    Detailed log messages.
+# --log-facility       -S    0-7 Set local syslog facility (default=LOG_DAEMON)
+#
+
+KEEPALIVED_OPTIONS="-D"
+---------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/cluster]# cat haproxy-outside-keepalived.sls
+---------------------------------------------------------
+include:
+  - modules.keepalived.install
+
+keepalived-server:
+  file.managed:
+    - name: /etc/keepalived/keepalived.conf
+    - source: salt://cluster/files/haproxy-outside-keepalived.conf
+    - mode: 644
+    - user: root
+    - group: root
+    - template: jinja
+    {% if grains['fqdn'] == 'SaltstackServer.com' %}
+    - ROUTEID: haproxy_ha
+    - STATEID: MASTER
+    - PRIORITYID: 150
+    {% elif grains['fqdn'] == 'linux-node1' %}
+    - ROUTEID: haproxy_ha
+    - STATEID: BACKUP
+    - PRIORITYID: 100
+    {% endif %}
+  service.running:
+    - name: keepalived
+    - enable: True
+    - watch:
+      - file: keepalived-server
+---------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/cluster/files]# cat haproxy-outside-keepalived.conf
+---------------------------------------------------------
+
+! Configuration File for keepalived
+global_defs {
+   notification_email {
+     saltstack@example.com
+   }
+   notification_email_from keepalived@example.com
+   smtp_server 127.0.0.1
+   smtp_connect_timeout 30
+   router_id {{ROUTEID}}
+}
+
+vrrp_instance haproxy_ha {
+state {{STATEID}}
+interface eth0
+    virtual_router_id 36
+priority {{PRIORITYID}}
+    advert_int 1
+authentication {
+auth_type PASS
+        auth_pass 1111
+    }
+    virtual_ipaddress {
+       192.168.1.234
+    }
+}
+
+---------------------------------------------------------
+[root@SaltstackServer /srv/salt/base]# cat top.sls
+---------------------------------------------------------
+base:
+  '*':
+    - init.init
+prod:
+  '*':
+    - cluster.haproxy-outside
+    - cluster.haproxy-outside-keepalived
+---------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/cluster/files]# salt -L 'SaltstackServer.com,linux-node1' state.highstate
+[root@SaltstackServer /srv/salt]# tree
+.
+├── base
+│   ├── init
+│   │   ├── audit.sls
+│   │   ├── dns.sls
+│   │   ├── epel.sls
+│   │   ├── files
+│   │   │   ├── resolv.conf
+│   │   │   └── zabbix_agentd.conf
+│   │   ├── history.sls
+│   │   ├── init.sls
+│   │   ├── sysctl.sls
+│   │   └── zabbix-agent.sls
+│   └── top.sls
+└── prod
+    ├── cluster
+    │   ├── files
+    │   │   ├── haproxy-outside.cfg.template
+    │   │   └── haproxy-outside-keepalived.conf
+    │   ├── haproxy-outside-keepalived.sls
+    │   └── haproxy-outside.sls
+    └── modules
+        ├── haproxy
+        │   ├── files
+        │   │   ├── haproxy-1.9.0.tar.gz
+        │   │   └── haproxy.init
+        │   └── install.sls
+        ├── keepalived
+        │   ├── files
+        │   │   ├── keepalived-1.2.17.tar.gz
+        │   │   ├── keepalived.init
+        │   │   └── keepalived.sysconfig
+        │   └── install.sls
+        ├── memcached
+        ├── nginx
+        ├── php
+        └── pkg
+            └── make.sls
+
+
+
+
 
 
 </pre>
