modify 5.saltstack.md for 201901032343

--- a/5.Saltstack.md
+++ b/5.Saltstack.md
@@ -441,9 +441,317 @@ linux-node1:
         - init.init
 [root@SaltstackServer /srv/salt/base]# salt '*' state.highstate  --执行高级状态
 
-##keepalived部署：
-[root@SaltstackServer /srv/salt/prod/modules/keepalived]# vim install.sls
+
+##haproxy部署
+[root@SaltstackServer /srv/salt/prod]# tree
+
+├── cluster
+│   ├── files
+│   │   ── haproxy-outside.cfg.template
+│   └── haproxy-outside.sls
+└── modules
+    ├── haproxy
+    │   ├── files
+    │   │   ├── haproxy-1.9.0.tar.gz
+    │   │   └── haproxy.init
+    │   └── install.sls
+    ├── keepalived
+    ├── libevent
+    ├── memcached
+    ├── nginx
+    ├── php
+    ├── pkg
+         ── make.sls
+
+
+--------------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/modules/pkg]# cat make.sls
+make-pkg:
+  pkg.installed:
+    - pkgs:
+      - gcc
+      - gcc-c++
+      - glibc
+      - make
+      - autoconf
+      - openssl
+      - openssl-devel
+      - pcre
+      - pcre-devel
+---------------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/modules/haproxy]# cat install.sls
+include:
+  - modules.pkg.make
+
+haproxy-install:
+  file.managed:
+    - name: /usr/local/src/haproxy-1.9.0.tar.gz
+    - source: salt://modules/haproxy/files/haproxy-1.9.0.tar.gz
+    - mode: 755
+    - user: root
+    - group: root
+  cmd.run:
+    - name: cd /usr/local/src && tar -zxf haproxy-1.9.0.tar.gz && cd haproxy-1.9.0 && make TARGET=linux2628 PREFIX=/usr/local/haproxy-1.9.0 && make install PREF                                                                                                                IX=/usr/local/haproxy-1.9.0 && ln -s /usr/local/haproxy-1.9.0 /usr/local/haproxy
+    - unless: test -L /usr/local/haproxy
+    - require:
+      - pkg: make-pkg
+      - file: haproxy-install
+haproxy-init:
+  file.managed:
+    - name: /etc/init.d/haproxy
+    - source: salt://modules/haproxy/files/haproxy.init
+    - mode: 755
+    - user: root
+    - group: root
+    - require_in:
+      - file: haproxy-install
+  cmd.run:
+    - name: chkconfig --add haproxy
+    - unless: chkconfig --list | grep haproxy
+
+net.ipv4.ip_nonlocal_bind:
+  sysctl.present:
+    - value: 1
+/etc/haproxy:
+  file.directory:
+    - user: root
+    - group: root
+    - mode: 755
+-------------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/modules/haproxy/files]# cat haproxy.init
+#!/bin/sh
+#
+# chkconfig: - 85 15
+# description: HA-Proxy is a TCP/HTTP reverse proxy which is particularly suited \
+#              for high availability environments.
+# processname: haproxy
+# config: /etc/haproxy/haproxy.cfg
+# pidfile: /var/run/haproxy.pid
+
+# Script Author: Simon Matter <simon.matter@invoca.ch>
+# Version: 2004060600
+
+# Source function library.
+if [ -f /etc/init.d/functions ]; then
+  . /etc/init.d/functions
+elif [ -f /etc/rc.d/init.d/functions ] ; then
+  . /etc/rc.d/init.d/functions
+else
+  exit 0
+fi
+
+# Source networking configuration.
+. /etc/sysconfig/network
+
+# Check that networking is up.
+[ ${NETWORKING} = "no" ] && exit 0
+
+# This is our service name
+BASENAME=`basename $0`
+if [ -L $0 ]; then
+  BASENAME=`find $0 -name $BASENAME -printf %l`
+  BASENAME=`basename $BASENAME`
+fi
+
+BIN=/usr/local/haproxy/sbin/$BASENAME
+
+CFG=/etc/$BASENAME/$BASENAME.cfg
+[ -f $CFG ] || exit 1
+
+PIDFILE=/var/run/$BASENAME.pid
+LOCKFILE=/var/lock/subsys/$BASENAME
+
+RETVAL=0
+
+start() {
+  quiet_check
+  if [ $? -ne 0 ]; then
+    echo "Errors found in configuration file, check it with '$BASENAME check'."
+    return 1
+  fi
+
+  echo -n "Starting $BASENAME: "
+  daemon $BIN -D -f $CFG -p $PIDFILE
+  RETVAL=$?
+  echo
+  [ $RETVAL -eq 0 ] && touch $LOCKFILE
+  return $RETVAL
+}
+
+stop() {
+  echo -n "Shutting down $BASENAME: "
+  killproc $BASENAME -USR1
+  RETVAL=$?
+  echo
+  [ $RETVAL -eq 0 ] && rm -f $LOCKFILE
+  [ $RETVAL -eq 0 ] && rm -f $PIDFILE
+  return $RETVAL
+}
+
+restart() {
+  quiet_check
+  if [ $? -ne 0 ]; then
+    echo "Errors found in configuration file, check it with '$BASENAME check'."
+    return 1
+  fi
+  stop
+  start
+}
+
+reload() {
+  if ! [ -s $PIDFILE ]; then
+    return 0
+  fi
+
+  quiet_check
+  if [ $? -ne 0 ]; then
+    echo "Errors found in configuration file, check it with '$BASENAME check'."
+    return 1
+  fi
+  $BIN -D -f $CFG -p $PIDFILE -sf $(cat $PIDFILE)
+}
+
+check() {
+  $BIN -c -q -V -f $CFG
+}
+
+quiet_check() {
+  $BIN -c -q -f $CFG
+}
+
+rhstatus() {
+  status $BASENAME
+}
+
+condrestart() {
+  [ -e $LOCKFILE ] && restart || :
+}
+
+# See how we were called.
+case "$1" in
+  start)
+    start
+    ;;
+  stop)
+    stop
+    ;;
+  restart)
+    restart
+    ;;
+  reload)
+    reload
+    ;;
+  condrestart)
+    condrestart
+    ;;
+  status)
+    rhstatus
+    ;;
+  check)
+    check
+    ;;
+  *)
+    echo $"Usage: $BASENAME {start|stop|restart|reload|condrestart|status|check}"
+    exit 1
+esac
+
+exit $?
+-----------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/cluster]# cat haproxy-outside.sls
+include:
+  - modules.haproxy.install
+
+haproxy-service:
+  file.managed:
+    - name: /etc/haproxy/haproxy.cfg
+    - source: salt://cluster/files/haproxy-outside.cfg.template
+    - user: root
+    - group: root
+    - mode: 644
+  service.running:
+    - name: haproxy
+    - enable: True
+    - reload: True
+    - require:
+      - cmd: haproxy-install
+    - watch:
+      - file: haproxy-service
+--------------------------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/cluster/files]# cat haproxy-outside.cfg.template
+global
+maxconn 100000
+chroot /usr/local/haproxy
+uid 99
+gid 99
+daemon
+nbproc 1
+pidfile /usr/local/haproxy/logs/haproxy.pid
+log 127.0.0.1 local3 info
+
+#默认参数设置
+defaults
+option http-keep-alive
+maxconn 100000
+mode http
+timeout connect 5000ms
+timeout client  50000ms
+timeout server 50000ms
+
+#开启Haproxy Status状态监控，增加验证
+listen stats
+mode http
+bind 0.0.0.0:8888
+stats enable
+stats uri     /haproxy-status
+stats auth    haproxy:saltstack
+
+#前端设置
+frontend frontend_www_example_com
+bind 192.168.1.236:80
+mode http
+option httplog
+log global
+    default_backend backend_www_example_com
+
+#后端设置
+backend backend_www_example_com
+option forwardfor header X-REAL-IP
+option httpchk HEAD / HTTP/1.0
+balance source
+server web-node1  192.168.1.231:8080 check inter 2000 rise 30 fall 15
+server web-node2  192.168.1.232:8080 check inter 2000 rise 30 fall 15
 ---------------------------------------------------------
+
+
+##keepalived部署：
+[root@SaltstackServer /srv/salt/prod]# tree
+.
+├── cluster
+│   ├── files
+│   │   ├── haproxy-outside.cfg.template
+│   │   └── haproxy-outside-keepalived.conf
+│   ├── haproxy-outside-keepalived.sls
+│   └── haproxy-outside.sls
+└── modules
+    ├── haproxy
+    │   ├── files
+    │   │   ├── haproxy-1.9.0.tar.gz
+    │   │   └── haproxy.init
+    │   └── install.sls
+    ├── keepalived
+    │   ├── files
+    │   │   ├── keepalived-1.2.17.tar.gz
+    │   │   ├── keepalived.init
+    │   │   └── keepalived.sysconfig
+    │   └── install.sls
+    ├── libevent
+    ├── nginx
+    ├── php
+    ├── pkg
+        └── make.sls
+
+---------------------------------------------------------
+[root@SaltstackServer /srv/salt/prod/modules/keepalived]# cat install.sls
 {% set keepalived_tar= 'keepalived-1.2.17.tar.gz'  %}
 {% set keepalived_source= 'salt://modules/keepalived/files/'  %}
 
@@ -485,11 +793,25 @@ keepalived-init:
   file.directory:
     - user: root
     - group: root
+
 ---------------------------------------------------------
-[root@SaltstackServer /srv/salt/prod/modules/keepalived/files]# ls
-keepalived-1.2.17.tar.gz  keepalived.init  keepalived.sysconfig
-[root@SaltstackServer /srv/salt/prod/modules/keepalived/files]# cat keepalived.init
----------------------------------------------------------                                                                                                         
+[root@SaltstackServer /srv/salt/prod/modules/keepalived]# cat files/keepalived.sysconfig
+# Options for keepalived. See `keepalived --help' output and keepalived(8) and
+# keepalived.conf(5) man pages for a list of all options. Here are the most
+# common ones :
+#
+# --vrrp               -P    Only run with VRRP subsystem.
+# --check              -C    Only run with Health-checker subsystem.
+# --dont-release-vrrp  -V    Dont remove VRRP VIPs & VROUTEs on daemon stop.
+# --dont-release-ipvs  -I    Dont remove IPVS topology on daemon stop.
+# --dump-conf          -d    Dump the configuration data.
+# --log-detail         -D    Detailed log messages.
+# --log-facility       -S    0-7 Set local syslog facility (default=LOG_DAEMON)
+#
+
+KEEPALIVED_OPTIONS="-D"
+---------------------------------------------------------   
+[root@SaltstackServer /srv/salt/prod/modules/keepalived]# cat files/keepalived.init
 #!/bin/sh
 #
 # Startup script for the Keepalived daemon
@@ -566,25 +888,7 @@ esac
 
 exit $RETVAL
 ---------------------------------------------------------
-[root@SaltstackServer /srv/salt/prod/modules/keepalived/files]# cat keepalived.sysconfig
----------------------------------------------------------
-# Options for keepalived. See `keepalived --help' output and keepalived(8) and
-# keepalived.conf(5) man pages for a list of all options. Here are the most
-# common ones :
-#
-# --vrrp               -P    Only run with VRRP subsystem.
-# --check              -C    Only run with Health-checker subsystem.
-# --dont-release-vrrp  -V    Dont remove VRRP VIPs & VROUTEs on daemon stop.
-# --dont-release-ipvs  -I    Dont remove IPVS topology on daemon stop.
-# --dump-conf          -d    Dump the configuration data.
-# --log-detail         -D    Detailed log messages.
-# --log-facility       -S    0-7 Set local syslog facility (default=LOG_DAEMON)
-#
-
-KEEPALIVED_OPTIONS="-D"
----------------------------------------------------------
 [root@SaltstackServer /srv/salt/prod/cluster]# cat haproxy-outside-keepalived.sls
----------------------------------------------------------
 include:
   - modules.keepalived.install
 
@@ -612,8 +916,6 @@ keepalived-server:
       - file: keepalived-server
 ---------------------------------------------------------
 [root@SaltstackServer /srv/salt/prod/cluster/files]# cat haproxy-outside-keepalived.conf
----------------------------------------------------------
-
 ! Configuration File for keepalived
 global_defs {
    notification_email {
@@ -636,13 +938,12 @@ auth_type PASS
         auth_pass 1111
     }
     virtual_ipaddress {
-       192.168.1.234
+       192.168.1.236
     }
 }
 
 ---------------------------------------------------------
 [root@SaltstackServer /srv/salt/base]# cat top.sls
----------------------------------------------------------
 base:
   '*':
     - init.init
@@ -652,45 +953,6 @@ prod:
     - cluster.haproxy-outside-keepalived
 ---------------------------------------------------------
 [root@SaltstackServer /srv/salt/prod/cluster/files]# salt -L 'SaltstackServer.com,linux-node1' state.highstate
-[root@SaltstackServer /srv/salt]# tree
-.
-├── base
-│   ├── init
-│   │   ├── audit.sls
-│   │   ├── dns.sls
-│   │   ├── epel.sls
-│   │   ├── files
-│   │   │   ├── resolv.conf
-│   │   │   └── zabbix_agentd.conf
-│   │   ├── history.sls
-│   │   ├── init.sls
-│   │   ├── sysctl.sls
-│   │   └── zabbix-agent.sls
-│   └── top.sls
-└── prod
-    ├── cluster
-    │   ├── files
-    │   │   ├── haproxy-outside.cfg.template
-    │   │   └── haproxy-outside-keepalived.conf
-    │   ├── haproxy-outside-keepalived.sls
-    │   └── haproxy-outside.sls
-    └── modules
-        ├── haproxy
-        │   ├── files
-        │   │   ├── haproxy-1.9.0.tar.gz
-        │   │   └── haproxy.init
-        │   └── install.sls
-        ├── keepalived
-        │   ├── files
-        │   │   ├── keepalived-1.2.17.tar.gz
-        │   │   ├── keepalived.init
-        │   │   └── keepalived.sysconfig
-        │   └── install.sls
-        ├── memcached
-        ├── nginx
-        ├── php
-        └── pkg
-            └── make.sls
 
 
 
